--- a/Landing/index.html
+++ b/Landing/index.html
@@ -845,7 +845,7 @@
         <div class="popup quality__popup quality__popup--6">
             <i class="catalogue__hover-close catalogue__hover-close--quality-popup"></i>
             <h4 class="quality__popup-title">Высокое качество текстиля</h4>
-            <p class="quality__popup-desc">Текстиль, который используется в польских диванах, очень высокого качества с максимальным циклом износостойкости. Также используется натуральная кожа и экокожа исключительно класса А. Это эксклюзивные материалы, аналогов которым нет на белорусском рынке. </p>
+            <p class="quality__popup-desc">Текстиль, который используется в польских диванах, очень высокого качества с максимальным циклом износостойкости. Также используется натуральная кожа и экокожа исключительно класса А. Это эксклюзивные материалы, аналогов которым нет на белорусском рынке.. </p>
         </div>
         <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
         <script src="js/jquery-3.1.1.min.js"></script>
