Maked slider options for slider

--- a/Landing/index.html
+++ b/Landing/index.html
@@ -100,7 +100,7 @@
                                 <p class="slider__item-features">Посмотреть характеристики</p>
                                 <div class="catalogue__hover catalogue__hover--slider">
                                     <i class="catalogue__hover-close"></i>
-                                    <p class="catalogue__hover-title block__title--bold">Диван Камилла</p>
+                                    <p class="catalogue__hover-title block__title--bold">Диван Камилла2</p>
                                     <div class="catalogue__hover-desc-block">
                                         <div class="catalogue__hover-sizes-block--1">
                                             <p class="catalogue__hover-size">Размеры</p>
