Maked closing for quality pupups, opening options for items and set fancybox for gallery

--- a/Landing/index.html
+++ b/Landing/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700|Rubik:400,500,700" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
+
 	</head>
 	<body>
         <div class="header-container">
@@ -65,7 +66,7 @@
                                     </div>
                                     <div class="catalogue__hover-details-block">
                                     <div class="catalogue__hover-gallery">
-                                        <a class="catalogue__hover-gall-link" href="#"><img src="img/gallery_item1.png" alt="" class="catalogue__hover-gall-item"></a>
+                                        <a class="catalogue__hover-gall-link fancybox" rel="group" href="img/sofas/kamila/Kamila.png"><img src="img/sofas/kamila/Kamila.png" alt="" class="catalogue__hover-gall-item"></a>
                                         <a class="catalogue__hover-gall-link" href="#"><img src="img/gallery_item2.png" alt="" class="catalogue__hover-gall-item"></a>
                                         <a class="catalogue__hover-gall-link" href="#"><img src="img/gallery_item3.png" alt="" class="catalogue__hover-gall-item"></a>
                                         <a class="catalogue__hover-gall-link" href="#"><img src="img/gallery_item4.png" alt="" class="catalogue__hover-gall-item"></a>
@@ -825,38 +826,52 @@
                 <button class="popup__btn" type="submit">Отправить</button>
             </form>
         </div>
-        <div class="popup quality__popup quality__popup--1">
-            <i class="catalogue__hover-close catalogue__hover-close--quality-popup"></i>
-            <h4 class="quality__popup-title">Высокое качество текстиля</h4>
-            <p class="quality__popup-desc">Текстиль, который используется в польских диванах, очень высокого качества с максимальным циклом износостойкости. Также используется натуральная кожа и экокожа исключительно класса А. Это эксклюзивные материалы, аналогов которым нет на белорусском рынке. </p>
-        </div>
-        <div class="popup quality__popup quality__popup--2">
-            <i class="catalogue__hover-close catalogue__hover-close--quality-popup"></i>
-            <h4 class="quality__popup-title">Высокое качество текстиля</h4>
-            <p class="quality__popup-desc">Текстиль, который используется в польских диванах, очень высокого качества с максимальным циклом износостойкости. Также используется натуральная кожа и экокожа исключительно класса А. Это эксклюзивные материалы, аналогов которым нет на белорусском рынке. </p>
-        </div>
-        <div class="popup quality__popup quality__popup--3">
-            <i class="catalogue__hover-close catalogue__hover-close--quality-popup"></i>
-            <h4 class="quality__popup-title">Высокое качество текстиля</h4>
-            <p class="quality__popup-desc">Текстиль, который используется в польских диванах, очень высокого качества с максимальным циклом износостойкости. Также используется натуральная кожа и экокожа исключительно класса А. Это эксклюзивные материалы, аналогов которым нет на белорусском рынке. </p>
-        </div>
-        <div class="popup quality__popup quality__popup--4">
-            <i class="catalogue__hover-close catalogue__hover-close--quality-popup"></i>
-            <h4 class="quality__popup-title">Высокое качество текстиля</h4>
-            <p class="quality__popup-desc">Текстиль, который используется в польских диванах, очень высокого качества с максимальным циклом износостойкости. Также используется натуральная кожа и экокожа исключительно класса А. Это эксклюзивные материалы, аналогов которым нет на белорусском рынке. </p>
-        </div>
-        <div class="popup quality__popup quality__popup--5">
-            <i class="catalogue__hover-close catalogue__hover-close--quality-popup"></i>
-            <h4 class="quality__popup-title">Высокое качество текстиля</h4>
-            <p class="quality__popup-desc">Текстиль, который используется в польских диванах, очень высокого качества с максимальным циклом износостойкости. Также используется натуральная кожа и экокожа исключительно класса А. Это эксклюзивные материалы, аналогов которым нет на белорусском рынке. </p>
-        </div>
-        <div class="popup quality__popup quality__popup--6">
-            <i class="catalogue__hover-close catalogue__hover-close--quality-popup"></i>
-            <h4 class="quality__popup-title">Высокое качество текстиля</h4>
-            <p class="quality__popup-desc">Текстиль, который используется в польских диванах, очень высокого качества с максимальным циклом износостойкости. Также используется натуральная кожа и экокожа исключительно класса А. Это эксклюзивные материалы, аналогов которым нет на белорусском рынке.. </p>
+        <div class="qualities__pupup-container">
+            <div class="popup quality__popup quality__popup--1">
+                <i class="catalogue__hover-close catalogue__hover-close--quality-popup"></i>
+                <h4 class="quality__popup-title">Высокое качество текстиля</h4>
+                <p class="quality__popup-desc">Текстиль, который используется в польских диванах, очень высокого качества с максимальным циклом износостойкости. Также используется натуральная кожа и экокожа исключительно класса А. Это эксклюзивные материалы, аналогов которым нет на белорусском рынке. </p>
+            </div>
+            <div class="popup quality__popup quality__popup--2">
+                <i class="catalogue__hover-close catalogue__hover-close--quality-popup"></i>
+                <h4 class="quality__popup-title">Высокое качество текстиля</h4>
+                <p class="quality__popup-desc">Текстиль, который используется в польских диванах, очень высокого качества с максимальным циклом износостойкости. Также используется натуральная кожа и экокожа исключительно класса А. Это эксклюзивные материалы, аналогов которым нет на белорусском рынке. </p>
+            </div>
+            <div class="popup quality__popup quality__popup--3">
+                <i class="catalogue__hover-close catalogue__hover-close--quality-popup"></i>
+                <h4 class="quality__popup-title">Высокое качество текстиля</h4>
+                <p class="quality__popup-desc">Текстиль, который используется в польских диванах, очень высокого качества с максимальным циклом износостойкости. Также используется натуральная кожа и экокожа исключительно класса А. Это эксклюзивные материалы, аналогов которым нет на белорусском рынке. </p>
+            </div>
+            <div class="popup quality__popup quality__popup--4">
+                <i class="catalogue__hover-close catalogue__hover-close--quality-popup"></i>
+                <h4 class="quality__popup-title">Высокое качество текстиля</h4>
+                <p class="quality__popup-desc">Текстиль, который используется в польских диванах, очень высокого качества с максимальным циклом износостойкости. Также используется натуральная кожа и экокожа исключительно класса А. Это эксклюзивные материалы, аналогов которым нет на белорусском рынке. </p>
+            </div>
+            <div class="popup quality__popup quality__popup--5">
+                <i class="catalogue__hover-close catalogue__hover-close--quality-popup"></i>
+                <h4 class="quality__popup-title">Высокое качество текстиля</h4>
+                <p class="quality__popup-desc">Текстиль, который используется в польских диванах, очень высокого качества с максимальным циклом износостойкости. Также используется натуральная кожа и экокожа исключительно класса А. Это эксклюзивные материалы, аналогов которым нет на белорусском рынке. </p>
+            </div>
+            <div class="popup quality__popup quality__popup--6">
+                <i class="catalogue__hover-close catalogue__hover-close--quality-popup"></i>
+                <h4 class="quality__popup-title">Высокое качество текстиля</h4>
+                <p class="quality__popup-desc">Текстиль, который используется в польских диванах, очень высокого качества с максимальным циклом износостойкости. Также используется натуральная кожа и экокожа исключительно класса А. Это эксклюзивные материалы, аналогов которым нет на белорусском рынке.. </p>
+            </div>
         </div>
         <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-        <script src="js/jquery-3.1.1.min.js"></script>
+
         <script src="js/catalogue.js"></script>
+        <script src="js/scripts.js"></script>
+        <script src="js/jquery-3.1.1.min.js"></script>
+        <!-- Add fancyBox -->
+        <link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
+        <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+        <script type="text/javascript">
+            $(document).ready(function() {
+                $(".fancybox").fancybox();
+            });
+        </script>
+
+
 	</body>
 </html>
