Wrote php code for forms and made fancybox wrapper

--- a/Landing/index.html
+++ b/Landing/index.html
@@ -40,7 +40,7 @@
                                 <span class="slider__price-item slider__price--old">1 920</span>
                                 <span class="slider__price-item slider__price--new">1 520 <i class="slider__price--new-small">руб</i></span>
                             </div>
-                            <button class="btn slider__item-btn">Заказать</button>
+                            <button class="btn slider__item-btn" data-model="камилла">Заказать</button>
                             <div class="slider__item-charact">
                                 <p class="slider__item-features">Посмотреть характеристики</p>
                                 <div class="catalogue__hover catalogue__hover--slider">
@@ -66,7 +66,7 @@
                                     </div>
                                     <div class="catalogue__hover-details-block">
                                     <div class="catalogue__hover-gallery">
-                                        <a class="catalogue__hover-gall-link fancybox" rel="group" href="img/sofas/kamila/Kamila.png"><img src="img/sofas/kamila/Kamila.png" alt="" class="catalogue__hover-gall-item"></a>
+                                        <a class="catalogue__hover-gall-link"  href="#"><img src="img/sofas/kamila/Kamila.png" alt="" class="catalogue__hover-gall-item"></a>
                                         <a class="catalogue__hover-gall-link" href="#"><img src="img/gallery_item2.png" alt="" class="catalogue__hover-gall-item"></a>
                                         <a class="catalogue__hover-gall-link" href="#"><img src="img/gallery_item3.png" alt="" class="catalogue__hover-gall-item"></a>
                                         <a class="catalogue__hover-gall-link" href="#"><img src="img/gallery_item4.png" alt="" class="catalogue__hover-gall-item"></a>
@@ -96,7 +96,7 @@
                                 <span class="slider__price-item slider__price--old">1 920</span>
                                 <span class="slider__price-item slider__price--new">1 520 <i class="slider__price--new-small">руб</i></span>
                             </div>
-                            <button class="btn slider__item-btn">Заказать</button>
+                            <button class="btn slider__item-btn" data-model="камилла2">Заказать</button>
                             <div class="slider__item-charact">
                                 <p class="slider__item-features">Посмотреть характеристики</p>
                                 <div class="catalogue__hover catalogue__hover--slider">
@@ -152,7 +152,7 @@
                                 <span class="slider__price-item slider__price--old">1 920</span>
                                 <span class="slider__price-item slider__price--new">1 520 <i class="slider__price--new-small">руб</i></span>
                             </div>
-                            <button class="btn slider__item-btn">Заказать</button>
+                            <button class="btn slider__item-btn" data-model="камилла3">Заказать</button>
                             <div class="slider__item-charact">
                                 <p class="slider__item-features">Посмотреть характеристики</p>
                                 <div class="catalogue__hover catalogue__hover--slider">
@@ -208,7 +208,7 @@
                                 <span class="slider__price-item slider__price--old">1 920</span>
                                 <span class="slider__price-item slider__price--new">1 520 <i class="slider__price--new-small">руб</i></span>
                             </div>
-                            <button class="btn slider__item-btn">Заказать</button>
+                            <button class="btn slider__item-btn" data-model="камилла4">Заказать</button>
                             <div class="slider__item-charact">
                                 <p class="slider__item-features">Посмотреть характеристики</p>
                                 <div class="catalogue__hover catalogue__hover--slider">
@@ -330,7 +330,7 @@
                                 <span class="slider__price--old catalogue__price--old">1 920</span>
                                 <span class="slider__price--new catalogue__price--new">1 520 <span>руб</span></span>
                             </div>
-                            <button class="btn slider__item-btn catalogue__item-btn">Заказать</button>
+                            <button class="btn slider__item-btn catalogue__item-btn" data-model="камилла1">Заказать</button>
                         </div>
                     </article>
                     <article class="catalogue__item">
@@ -381,7 +381,7 @@
                                 <span class="slider__price--old catalogue__price--old">1 920</span>
                                 <span class="slider__price--new catalogue__price--new">1 520 <span>руб</span></span>
                             </div>
-                            <button class="btn slider__item-btn catalogue__item-btn">Заказать</button>
+                            <button class="btn slider__item-btn catalogue__item-btn" data-model="камилла2">Заказать</button>
                         </div>
                     </article>
                 </div>
@@ -434,7 +434,7 @@
 							<span class="slider__price--old catalogue__price--old">1 920</span>
                             <span class="slider__price--new catalogue__price--new">1 520 <span>руб</span></span>
 						</div>
-						<button class="btn slider__item-btn catalogue__item-btn">Заказать</button>
+						<button class="btn slider__item-btn catalogue__item-btn" data-model="камилла3">Заказать</button>
 					</div>
 				</article>
                     <article class="catalogue__item">
@@ -485,7 +485,7 @@
 							<span class="slider__price--old catalogue__price--old">1 920</span>
                             <span class="slider__price--new catalogue__price--new">1 520 <span>руб</span></span>
 						</div>
-						<button class="btn slider__item-btn catalogue__item-btn">Заказать</button>
+						<button class="btn slider__item-btn catalogue__item-btn" data-model="камилла4">Заказать</button>
 					</div>
 				</article>
                 </div>
@@ -538,7 +538,7 @@
 							<span class="slider__price--old catalogue__price--old">1 920</span>
                             <span class="slider__price--new catalogue__price--new">1 520 <span>руб</span></span>
 						</div>
-						<button class="btn slider__item-btn catalogue__item-btn">Заказать</button>
+						<button class="btn slider__item-btn catalogue__item-btn" data-model="камилла6">Заказать</button>
 					</div>
 				</article>
                     <article class="catalogue__item">
@@ -589,7 +589,7 @@
 							<span class="slider__price--old catalogue__price--old">1 920</span>
                             <span class="slider__price--new catalogue__price--new">1 520 <span>руб</span></span>
 						</div>
-						<button class="btn slider__item-btn catalogue__item-btn">Заказать</button>
+						<button class="btn slider__item-btn catalogue__item-btn" data-model="камилла8">Заказать</button>
 					</div>
 				</article>
                 </div>
@@ -642,7 +642,7 @@
 							<span class="slider__price--old catalogue__price--old">1 920</span>
                             <span class="slider__price--new catalogue__price--new">1 520 <span>руб</span></span>
 						</div>
-						<button class="btn slider__item-btn catalogue__item-btn">Заказать</button>
+						<button class="btn slider__item-btn catalogue__item-btn" data-model="камилла9">Заказать</button>
 					</div>
 				</article>
                     <article class="catalogue__item">
@@ -693,7 +693,7 @@
 							<span class="slider__price--old catalogue__price--old">1 920</span>
                             <span class="slider__price--new catalogue__price--new">1 520 <span>руб</span></span>
 						</div>
-						<button class="btn slider__item-btn catalogue__item-btn">Заказать</button>
+						<button class="btn slider__item-btn catalogue__item-btn" data-model="камилла10">Заказать</button>
 					</div>
 				</article>
                 </div>
@@ -773,9 +773,10 @@
                 <div class="contact__block">
                     <p class="contact__title">Остались вопросы?</p>
                     <p class="contact__ask">Задайте их нашему менеджеру</p>
-                    <form class="contact__form" action="dashayarohovich@mail.ru">
+                    <form class="contact__form" action="send.php" method="POST" id="form_manager" enctype="multipart/form-data">
+                        <input type="hidden" name="type" value="Ворпос менеджеру">
                         <input class="contact__input contact__input--name" type="text" name="name" placeholder="Представьтесь" required>
-                        <input class="contact__input contact__input--email" type="text" name="email" placeholder="Оставьте ваш телефон или емейл" required>
+                        <input class="contact__input contact__input--email" type="text" name="phone" placeholder="Оставьте ваш телефон или емейл" required>
                         <input class="contact__input contact__input--question" type="text" name="question" placeholder="Опишите суть вашего вопроса" required>
                         <button class="contact__btn" type="submit">Отправить</button>
                     </form>
@@ -807,22 +808,25 @@
         <div class="popup popup__designer-call">
             <i class="catalogue__hover-close catalogue__hover-close--popup"></i>
             <h4 class="popup__header">Вызвать дизайнера</h4>
-            <form class="form__call-designer">
-                <input class="popup__input" placeholder="Введите ваш телефон или е-мейл" required>
+            <form class="form__call-designer" id="form_diz" >
+                <input class="popup__input" placeholder="Введите ваш телефон или е-мейл" name="phone" required>
+                <input type="hidden" name="type" value="Вызвать дизайнера">
                 <button class="popup__btn popup__btn--designer" type="submit">Отправить</button>
             </form>
         </div>
         <div class="popup popup__designer-submit">
             <i class="catalogue__hover-close catalogue__hover-close--popup"></i>
-            <h4 class="popup__header popup__header--designer-submit">Ваш вызов дизайнера успешно отправлен</h4>
+            <h4 class="popup__header popup__header--designer-submit">Заявка успешно отправлена</h4>
             <p class="popup__text">В ближайшее время наш специалист свяжется с вами.</p>
             <button class="popup__btn popup__btn--designer-close">Закрыть</button>
         </div>
         <div class="popup popup__order">
             <i class="catalogue__hover-close catalogue__hover-close--popup"></i>
             <h4 class="popup__header popup__header--order">Заявка на диван</h4>
-            <form class="form__order">
-                <input class="popup__input" placeholder="Введите ваш телефон или е-мейл" required>
+            <form class="form__order" id="form_zakaz">
+                <input class="popup__input" name="phone" placeholder="Введите ваш телефон или е-мейл" required>
+                <input type="hidden" name="model" value="">
+                <input type="hidden" name="type" value="Заявка на диван" >
                 <button class="popup__btn" type="submit">Отправить</button>
             </form>
         </div>
@@ -871,6 +875,10 @@
                 $(".fancybox").fancybox();
             });
         </script>
+
+        <script src="js/forms.js"></script>
+        <script type="text/javascript" src="js/jquery.inputmask.js" ></script>
+        <script type="text/javascript" src="js/jquery.validate.min.js"></script>
 
 
 	</body>
