--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<title>Gllacy Shop</title>
@@ -7,38 +7,38 @@
 	<meta name="keywords" content="">
 </head>
 <body>
-	<header class="main-header">
-		<div class="container">
-			<div class="main-logo">
-				<img src="" alt="" width="" height="">
+	<header class="main-header container">
+			<div class="main-header__main-logo">
+				<img class="main-header__logo-img" src="" alt="" width="" height="">
 			</div>
 			<nav class="main-navigation">
-				<ul>
-					<li><a href="#">Каталог</a></li>
-					<li><a href="#">Доставка и оплата</a></li>
-					<li><a href="#">О компании</a></li>
+				<ul class="main-navigation__list">
+					<li class="main-navigation__list-string"><a href="#">Каталог</a></li>
+					<li class="main-navigation__list-string"><a href="#">Доставка и оплата</a></li>
+					<li class="main-navigation__list-string"><a href="#">О компании</a></li>
 				</ul>
 			</nav>
-			<div class="search"></div>
-			<div class="user-login">
-				<a href="#">Вход</a>
-			</div>
-			<div class="user-cart">
-				<a href="#">Пусто</a>
+			<div class="user-panel">
+				<div class="user-panel__search"></div>
+				<div class="user-panel__user-login">
+					<a href="#">Вход</a>
+				</div>
+				<div class="user-panel__user-cart">
+					<a href="#">Пусто</a>
+				</div>
 			</div>
 			<div class="header-contacts">
-				<p>
+				<p class="header-contacts__work-time">
 					c 10 до 20 ежедневно,
-					<span>8 812 450-25-25</span>
+					<span class="header-contacts__tel">8 812 450-25-25</span>
 				</p>
 			</div>
-		</div>
 	</header>
 	<main class="container">
 		<article class="main-slider">
 			<section class="main-slider__slide1">
-				<img src="" alt="" width="" height="">
-				<h2>Крем-брюле и пломбир с малиновым джемом</h2>
+				<img class="main-slider__img" src="" alt="" width="" height="">
+				<h2 class="main-slider__title">Крем-брюле и пломбир с малиновым джемом</h2>
 				<a class="btn main-slider__button" href="#">Дайте две</a>
 			</section>
 			<div class="main-slider__switcher">
@@ -47,153 +47,148 @@
 				<input type="radio" name="slide1">
 			</div>
 		</article>
-		<article class="promo">
-			<section class="promo__block1">
-				<b>Малинка даром!</b>
-				<p>
+		<div class="bloks-wrapper">
+			<section class="promo-block promo-block_raspb">
+				<b class="promo-block__title">Малинка даром!</b>
+				<p class="promo-block__desc">
 					При покупке 2ух кг любого фруктового мороженного, добавим в ваш заказ банку малинового варенья бесплатно.
 				</p>
-				<a class="btn promo__button">Хочу варенье!</a>
+				<a class="promo-block__button btn">Хочу варенье!</a>
 			</section>
-			<section class="promo__block2">
-				<b>Шоколадки даром!</b>
-				<p>
+			<section class="promo__block promo__block_choco">
+				<b class="promo-block__title">Шоколадки даром!</b>
+				<p class="promo-block__desc">
 					При покупке 2ух кг пломбира, добавим в ваш заказ банку вкуснейшей шоколадной присыпки совершенно бесплатно.
 				</p>
-				<a class="btn promo__button">Хочу варенье!</a>
+				<a class="promo-block__button btn">Хочу варенье!</a>
 			</section>
-		</article>
+		</div>
 		<section class="products-list">
 			<article class="product">
-				<div class="product__label">Хит</div>
-				<div class="product__image">
-					<img src="" alt="" width="" height="">
+				<span class="product__label">Хит</span>
+				<div class="product__image-block">
+					<img class="product__image" src="" alt="" width="" height="">
 				</div>
 				<div class="product__price">
-					380<span>Р/кг</span>
+					380
+					<span class="product__units">Р/кг</span>
 				</div>
-				<div class="product__name">
-					<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-				</div>	
+				<a class="product__name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 			</article>
 			<article class="product">
-				<div class="product__label">Хит</div>
-				<div class="product__image">
-					<img src="" alt="" width="" height="">
+				<span class="product__label">Хит</span>
+				<div class="product__image-block">
+					<img class="product__image" src="" alt="" width="" height="">
 				</div>
 				<div class="product__price">
-					380<span>Р/кг</span>
+					380
+					<span class="product__units">Р/кг</span>
 				</div>
-				<div class="product__name">
-					<p>Сливочно-кофейное с кусочками шоколада</p>
-				</div>	
+				<a class="product__name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 			</article>
 			<article class="product">
-				<div class="product__label">Хит</div>
-				<div class="product__image">
-					<img src="" alt="" width="" height="">
+				<span class="product__label">Хит</span>
+				<div class="product__image-block">
+					<img class="product__image" src="" alt="" width="" height="">
 				</div>
 				<div class="product__price">
-					380<span>Р/кг</span>
+					380
+					<span class="product__units">Р/кг</span>
 				</div>
-				<div class="product__name">
-					<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
-				</div>	
+				<a class="product__name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 			</article>
 			<article class="product">
-				<div class="product__label">Хит</div>
-				<div class="product__image">
-					<img src="" alt="" width="" height="">
+				<span class="product__label">Хит</span>
+				<div class="product__image-block">
+					<img class="product__image" src="" alt="" width="" height="">
 				</div>
 				<div class="product__price">
-					380<span>Р/кг</span>
+					380
+					<span class="product__units">Р/кг</span>
 				</div>
-				<div class="product__name">
-					<p>Сливочное крем-брюле с карамелоной подливкой</p>
-				</div>	
+				<a class="product__name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 			</article>
 		</section>
 		<article class="advantages">
-			<h1>
+			<h1 class="advantages__title">
 				Магазин Глейси - это офлайн и онлайн магазин по продаже мороженного собственного производства на развес
 			</h1>
-			<div class="advantages__advantage">
-				<img src="" alt="" width="" height="">
-				<p>
+			
+			<div class="advantages__item advantages__item_bg-icecream">
+				<p class="advantages__desc">
 					Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
 				</p>
 			</div>
-			<div class="advantages__advantage">
-				<img src="" alt="" width="" height="">
-				<p>
-					Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
+			<div class="advantages__item advantages__item_bg-leaf">
+				<p class="advantages__desc">
+					Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
 				</p>
 			</div>
-			<div class="advantages__advantage">
-				<img src="" alt="" width="" height="">
-				<p>
-					Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
+			<div class="advantages__item advantages__item_bg-cow">
+				<p class="advantages__desc">
+					Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
 				</p>
 			</div>
-			<div class="advantages__advantage">
-				<img src="" alt="" width="" height="">
-				<p>
-					Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
+			<div class="advantages__item advantages__item_bg-degree">
+				<p class="advantages__desc">
+					Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
 				</p>
 			</div>
+			
 		</article>
-		<article class="blog-news">
-			<span>Новое в нашем блоге</span>
-			<p>
+		<div class="bloks-wrapper">
+			<article class="blog-news">
+			<span class="blog-news__title">Новое в нашем блоге</span>
+			<p class="blog-news__desc">
 				<a href="#">10 способов серверовки фруктовых щербетов к столу</a>
 			</p>
 		</article>
 		<article class="subscribe">
-			<p>
+			<p class="subscribe__desc">
 				Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =) 
 			</p>
 			<form class="subscribe__form" action="#" method="post">
-				<input type="text" name="email" placeholder="Электронная почта">
-				<button class="btn subscribe__button" type="submit">Отправить</button>
+				<input class="subscribe__input" type="text" name="email" placeholder="Электронная почта">
+				<button class="subscribe__button btn" type="submit">Отправить</button>
 			</form>
 		</article>
+		</div>
 		<article class="map">
-			<section class="map__address-details">
-				<p>
+			<section class="map__address-block">
+				<p class="map__address-details">
 					Адрес главного офиса и<br>
 					офлайн магазина:
-					<strong>ул. Большая Конюшенная 19/8, Санкт-Петербург</strong>
+					<strong class="map__address-main">ул. Большая Конюшенная 19/8, Санкт-Петербург</strong>
 					Для заказов по телефону:<br>
-					<strong>8 812 450-25-25</strong><br>
+					<strong class="map__address-main">8 812 450-25-25</strong><br>
 					(с 10 до 20 ежедневно)
 				</p>
-				<a class="btn map__button">Форма обратной связи</a>
+				<a class="map__button btn">Форма обратной связи</a>
 			</section>
 		</article>
 	</main>
 	<footer class="main-footer">
 		<div class="container">
 			<div class="social-icons">
-				<div class="social-icons__tw"></div>
-				<div class="social-icons__in"></div>
-				<div class="social-icons__fb"></div>
-				<div class="social-icons__vk"></div>
+				<a class="social-icons__icon  social-icons__icon_tw" href="#"></a>
+				<a class="social-icons__icon  social-icons__icon_in" href="#"></a>
+				<a class="social-icons__icon  social-icons__icon_fb" href="#"></a>
+				<a class="social-icons__icon  social-icons__icon_vk" href="#"></a>
 			</div>
 			<nav class="footer-navigation">
-				<ul>
-					<li>
-						<img src="">
+				<ul class="footer-navigation__list">
+					<li class="footer-navigation__list-item footer-navigation__list-item_bg-heart">
 					    <a href="#"><b>Для поставщиков</b></a>
 					</li>
-					<li><a href="#">О производстве</a></li>
+					<li class="footer-navigation__list-item"><a href="#">О производстве</a></li>
 				</ul>
-				<ul>
-					<li><a href="#">Наши документы</a></li>
-					<li><a href="#">Экологические стандарты</a></li>
+				<ul class="footer-navigation__list">
+					<li class="footer-navigation__list-item"><a href="#">Наши документы</a></li>
+					<li class="footer-navigation__list-item"><a href="#">Экологические стандарты</a></li>
 				</ul>
 			</nav>
 			<div class="developers">
-				<img src="" alt="">
+				<img class="developers__img" src="" alt="">
 				<a href="#">Сделано в htmlacademy &#169; 2016</a>
 			</div>
 		</div>
