Renamed json files, started to adding the sofas in json and made the js scanner

--- a/Landing/indexTest.html
+++ b/Landing/indexTest.html
@@ -461,6 +461,34 @@
             </div>
         </div>
         <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+        <script>
+            /*================MAP=================*/
+            ymaps.ready(function () {
+                var myMap = new ymaps.Map('map', {
+                            center: [53.932324, 27.509064],
+                            zoom: 14
+                        }, {
+                            searchControlProvider: 'yandex#search'
+                        }),
+                        myPlacemark = new ymaps.Placemark([53.935324, 27.494064], {
+                            hintContent: "Пр-т Победителей, 103, оф. 1117",
+                            balloonContent: "MebelLive"
+                        }, {
+                            // Опции.
+                            // Необходимо указать данный тип макета.
+                            iconLayout: 'default#image',
+                            // Своё изображение иконки метки.
+                            iconImageHref: "img/map-mark.png",
+                            // Размеры метки.
+                            iconImageSize: [58, 96],
+                            // Смещение левого верхнего угла иконки относительно
+                            // её "ножки" (точки привязки).
+                            iconImageOffset: [0, 0]
+                        });
+
+                myMap.geoObjects.add(myPlacemark);
+            });
+        </script>
 
         <script src="js/catalogue.js"></script>
         <script src="js/scripts.js"></script>
